--- a/brafe-puro/src/styles/style.css
+++ b/brafe-puro/src/styles/style.css
@@ -1,3 +1,7 @@
+/* Estilos globais */
 @import url("./common/reset.css");
 @import url("./common/global.css");
+
+/* Sessões principais */
 @import url("./partials/menu.css");
+@import url("./partials/intro.css");
