--- a/brafe-1/brafe-puro/src/styles/partials/menu.css
+++ b/brafe-1/brafe-puro/src/styles/partials/menu.css
@@ -5,7 +5,7 @@
 
 .menu-container {
   max-width: 960px;
-  /* O margin está sendo usado para centralizar o elemento. */
+  /* Está aplicando auto no left e right, fazendo com que o elemento fique centralizado. */
   margin: 0 auto;
 }
 
@@ -51,6 +51,7 @@
 
   .menu-logo {
     float: none;
+    /* Está aplicando auto no left e right, fazendo com que o elemento fique centralizado. */
     margin: 0 auto;
   }
 
