--- a/brafe-1/brafe-grid/src/styles/partials/menu.css
+++ b/brafe-1/brafe-grid/src/styles/partials/menu.css
@@ -1,9 +1,34 @@
 .menu {
-	background: #252525;
+  background: #252525;
+  padding: 15px 0;
 }
 
-.menu-nav a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 1.125em;
+.menu-nav ul {
+  /* O float right está sendo usado para que os elementos fiquem alinhados a direita. */
+  float: right;
+}
+
+.menu-nav ul li {
+  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+  display: inline-block;
+}
+
+.menu-nav ul li a {
+  /* O display block está sendo usado para que todos os elementos ocupem o espaço total do elemento pai. */
+  display: block;
+  color: #fff;
+  font-size: 1.125em;
+  padding: 10px;
+  margin-left: 10px;
+}
+
+@media (max-width: 739px) {
+  .menu-nav ul {
+    float: none;
+  }
+
+  .menu-nav ul li a {
+    margin-left: 0;
+    padding: 10px 8px 10px 0;
+  }
 }
