--- a/brafe-1/brafe-grid/src/styles/partials/newsletter.css
+++ b/brafe-1/brafe-grid/src/styles/partials/newsletter.css
@@ -1,34 +1,42 @@
 .newsletter {
-	background: #e7e4d8;
+  background: #e7e4d8;
+  padding: 30px 0;
 }
 
 .newsletter-info h2 {
-	font-size: 2.25em;
+  font-size: 2.25em;
+  text-transform: capitalize;
 }
 
 .newsletter-info p {
-	font-size: 1.5em;
-	font-style: italic;
+  font-size: 1.5em;
+  font-style: italic;
 }
 
 .newsletter form label {
-	display: none;
+  display: none;
 }
 
 .newsletter input {
-	border: 3px solid #252525;
-	background: none;
-	font-size: 1.5em;
-	font-style: italic;
-	font-family: Georgia, serif;
+  border: 3px solid #252525;
+  background: none;
+  font-size: 1.5em;
+  font-style: italic;
+  font-family: Georgia, serif;
+  padding: 10px;
+  width: calc(100% - 140px);
+  /* O float left está sendo usado para que o elemento fique ao lado do botão. */
+  float: left;
 }
 
 .newsletter button {
-	background: #252525;
-	border: none;
-	font-family: Georgia, serif;
-	text-transform: uppercase;
-	font-size: 1.5em;
-	color: #fff;
-	cursor: pointer;
+  background: #252525;
+  border: none;
+  font-family: Georgia, serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  color: #fff;
+  cursor: pointer;
+  width: 140px;
+  padding: 13px 0;
 }
