--- a/brafe-1/brafe-puro/src/styles/partials/products.css
+++ b/brafe-1/brafe-puro/src/styles/partials/products.css
@@ -8,7 +8,7 @@
 
 .products-container {
   max-width: 960px;
-  /* O margin está sendo usado para centralizar o elemento. */
+  /* Está aplicando auto no left e right, fazendo com que o elemento fique centralizado. */
   margin: 0 auto;
 }
 
@@ -42,6 +42,7 @@
   /* O currentColor está sendo usado para que a cor do elemento seja a mesma do texto. */
   background-color: currentColor;
   border-radius: 50%;
+  /* Está aplicando auto no left e right, fazendo com que o elemento fique centralizado. */
   margin: 20px auto;
   border: 5px solid #e7e4d8;
   /* O currentColor está sendo usado para que a cor do elemento seja a mesma do texto. */
@@ -76,6 +77,7 @@
   text-transform: uppercase;
   text-align: center;
   padding: 15px 0;
+  /* Está aplicando auto no left e right, fazendo com que o elemento fique centralizado. */
   margin: 20px auto 0 auto;
 }
 
@@ -95,6 +97,7 @@
   }
 
   .products-item {
+    /* Está aplicando auto no left e right, fazendo com que o elemento fique centralizado. */
     margin: 0 auto;
     margin: 0 auto 20px auto;
   }
