--- a/brafe-1/brafe-flexbox/src/styles/partials/menu.css
+++ b/brafe-1/brafe-flexbox/src/styles/partials/menu.css
@@ -3,16 +3,22 @@
   padding: 15px 0;
 }
 
+.menu-logo {
+  margin: 0 10px;
+}
+
 .menu-nav {
   /* O flex 1 está sendo usado para que o elemento ocupe 100% do espaço disponível. */
   flex: 1;
   /* O align-self center está sendo usado para que o elemento fique centralizado verticalmente. */
   align-self: center;
+  padding: 10px;
 }
 
 .menu-nav ul {
+  /* O display flex faz com que os elementos filhos se comportem como flex-items e faz com que os filhos fiquem em linha(um do lado do outro) */
   display: flex;
-	justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .menu-nav a {
@@ -22,4 +28,12 @@
   padding: 10px;
 }
 
+@media (max-width: 739px) {
+  .menu-logo {
+    margin: 0;
+  }
 
+  .menu-nav a {
+    padding-left: 0;
+  }
+}
