--- a/brafe-1/brafe-flexbox/src/styles/partials/newsletter.css
+++ b/brafe-1/brafe-flexbox/src/styles/partials/newsletter.css
@@ -1,34 +1,68 @@
 .newsletter {
-	background: #e7e4d8;
+  background: #e7e4d8;
+  padding: 30px 0;
+}
+
+.newsletter-info,
+.newsletter form {
+  /* O flex 1 faz com que o item ocupe 100% do espaço disponível */
+  flex: 1;
+  margin: 0 10px;
 }
 
 .newsletter-info h2 {
-	font-size: 2.25em;
+  font-size: 2.25em;
 }
 
 .newsletter-info p {
-	font-size: 1.5em;
-	font-style: italic;
+  font-size: 1.5em;
+  font-style: italic;
+}
+
+.newsletter form {
+  /* O display flex faz com que os elementos filhos se comportem como flex-items e faz com que os filhos fiquem em linha(um do lado do outro) */
+  display: flex;
+  /* O flex-wrap: wrap está sendo usado para que os elementos filhos quebrem linha quando não couberem mais no container pai. */
+  flex-wrap: wrap;
+  /* O align-content flex-start está sendo usado para que os elementos filhos fiquem alinhados no início do eixo vertical(de cima para baixo).. */
+  align-content: flex-start;
 }
 
 .newsletter form label {
-	display: none;
+  display: none;
 }
 
 .newsletter input {
-	border: 3px solid #252525;
-	background: none;
-	font-size: 1.5em;
-	font-style: italic;
-	font-family: Georgia, serif;
+  /* O flex 1 faz com que o item ocupe 100% do espaço disponível */
+  flex: 1;
+  /* O align-self flex-start está sendo usado para que o elemento fique alinhado no início do eixo vertical(de cima para baixo).. */
+  align-self: flex-start;
+  padding: 10px;
+  border: 3px solid #252525;
+  background: none;
+  font-size: 1.5em;
+  font-style: italic;
+  font-family: Georgia, serif;
 }
 
 .newsletter button {
-	background: #252525;
-	border: none;
-	font-family: Georgia, serif;
-	text-transform: uppercase;
-	font-size: 1.5em;
-	color: #fff;
-	cursor: pointer;
+  /* O flex 1 faz com que o item ocupe 100% do espaço disponível */
+  flex: 1;
+  /* O align-self flex-start está sendo usado para que o elemento fique alinhado no início do eixo vertical(de cima para baixo).. */
+  align-self: flex-start;
+  padding: 13px;
+  background: #252525;
+  border: none;
+  font-family: Georgia, serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  color: #fff;
+  cursor: pointer;
+}
+
+@media (max-width: 739px) {
+  .newsletter-info,
+  .newsletter form {
+    margin: 0 0 20px 0;
+  }
 }
