--- a/brafe-1/brafe-bootstrap/src/styles/partials/locations.css
+++ b/brafe-1/brafe-bootstrap/src/styles/partials/locations.css
@@ -1,16 +1,30 @@
+.locations {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.locations-item {
+  margin-bottom: 40px;
+}
+
 .locations-item h2 {
-	font-size: 2.25em;
+  font-size: 2.25em;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
 
 .locations-item p {
-	font-size: 1.125em;
-	line-height: 1.4em;
+  font-size: 1.125em;
+  line-height: 1.4em;
+  max-width: 320px;
+  margin-bottom: 20px;
 }
 
 .locations-item a {
-	font-size: 1.125em;
-	text-transform: uppercase;
-	text-decoration: none;
-	border: 3px solid;
-	color: #252525;
+  font-size: 1.125em;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 3px solid;
+  color: #252525;
+  padding: 10px 20px;
 }
