--- a/brafe-1/brafe-bootstrap/src/styles/partials/menu.css
+++ b/brafe-1/brafe-bootstrap/src/styles/partials/menu.css
@@ -18,12 +18,12 @@
 }
 
 .menu-nav ul li {
-  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário(block). */
   display: inline-block;
 }
 
 .menu-nav ul li a {
-  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário(block). */
   display: inline-block;
   padding: 10px;
   margin-left: 10px;
@@ -31,7 +31,7 @@
 
 @media (max-width: 768px) {
   .menu-nav ul {
-    /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+    /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário(block). */
     display: inline-block;
   }
 
