--- a/brafe-1/brafe-flexbox/src/styles/common/global.css
+++ b/brafe-1/brafe-flexbox/src/styles/common/global.css
@@ -18,7 +18,8 @@ img {
 
 @media (max-width: 739px) {
   .container {
-    flex-direction: column;
     max-width: 300px;
+    /* O flex-direction column está sendo usado para que os elementos fiquem um embaixo do outro. */
+    flex-direction: column;
   }
 }
