--- a/brafe-2/brafe-bootstrap/src/styles/style.css
+++ b/brafe-2/brafe-bootstrap/src/styles/style.css
@@ -1,4 +1,5 @@
 /* Estilos globais */
+@import url("./utils/bootstrap.min.css");
 @import url("./common/reset.css");
 @import url("./common/global.css");
 
