--- a/brafe-1/brafe-puro/src/styles/partials/menu.css
+++ b/brafe-1/brafe-puro/src/styles/partials/menu.css
@@ -32,7 +32,7 @@
 }
 
 .menu-nav li {
-  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+  /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário(block). */
   display: inline-block;
 }
 
