--- a/brafe-1/brafe-puro/src/styles/partials/about.css
+++ b/brafe-1/brafe-puro/src/styles/partials/about.css
@@ -8,7 +8,7 @@
   margin: 0 auto;
 }
 
-/* Está aplicando o clearfix para que os elementos filhos do about-container não fiquem flutuando e assim o container não tenha altura 0. */
+/* Quando todos os elementos filhos de .about-container são flutuados, o elemento pai não tem mais altura, sendo assim sendo necessário limpar os floats, utilizando o clearfix. */
 .about-container::after,
 .about-container::before {
   content: "";
