--- a/brafe-2/brafe-grid/src/styles/utils/grid.css
+++ b/brafe-2/brafe-grid/src/styles/utils/grid.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
 }
 
-/* O clearfix é uma técnica para fazer com que um elemento pai se expanda para conter os floats dos seus filhos. */
+/* Quando todos os elementos filhos de .container são flutuados, o elemento pai não tem mais altura, sendo assim sendo necessário limpar os floats, utilizando o clearfix. */
 .container::after,
 .container::before {
   content: "";
@@ -115,7 +115,7 @@
   margin-right: -10px;
 }
 
-/* O clearfix é uma técnica para fazer com que um elemento pai se expanda para conter os floats dos seus filhos. */
+/* Quando todos os elementos filhos de .row e .row-mobile são flutuados, o elemento pai não tem mais altura, sendo assim sendo necessário limpar os floats, utilizando o clearfix. */
 .row::after,
 .row-mobile::after,
 .row::before,
