--- a/brafe-3/brafe-puro/src/styles/style.css
+++ b/brafe-3/brafe-puro/src/styles/style.css
@@ -5,3 +5,5 @@
 /* Sessões principais */
 @import url("./partials/header.css");
 @import url("./partials/side-nav.css");
+@import url("./partials/products.css");
+@import url("./partials/footer.css");
