--- a/brafe-3/brafe-puro/src/styles/partials/header.css
+++ b/brafe-3/brafe-puro/src/styles/partials/header.css
@@ -36,3 +36,14 @@
 .header-menu ul li:first-child a {
   padding-left: 0;
 }
+
+@media (max-width: 739px) {
+  .header-logo {
+    float: none;
+  }
+
+  .header-menu ul {
+    float: none;
+    margin-top: 10px;
+  }
+}
