--- a/brafe-2/brafe-bootstrap/src/styles/partials/footer.css
+++ b/brafe-2/brafe-bootstrap/src/styles/partials/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #e7e4d8;
-  font-size: 1.125rem;
+  font-size: 1.125em;
   text-align: center;
   padding: 60px 0;
   line-height: 1.4em;
