--- a/brafe-3/brafe-flexbox/src/styles/partials/side-nav.css
+++ b/brafe-3/brafe-flexbox/src/styles/partials/side-nav.css
@@ -1,9 +1,12 @@
 .side-nav {
-  width: 300px;
   background-color: #252525;
+  /* O flex 1 faz com que o item ocupe 100% do espaço disponível */
+  flex: 1;
+  max-width: 300px;
+  margin-right: 10px;
 }
 
-.side-nav ul li a {
+.side-nav li a {
   /* O display block está sendo usado para que o elemento ocupe toda a largura do elemento pai. */
   display: block;
   color: #fff;
@@ -12,7 +15,7 @@
   padding: 20px;
 }
 
-.side-nav ul li a::before {
+.side-nav li a::before {
   content: "";
   /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário(block). */
   display: inline-block;
@@ -57,15 +60,20 @@
 
 @media (max-width: 739px) {
   .side-nav {
+    margin: 10px;
     background-color: transparent;
-    /* O width auto está sendo usado para que o elemento ocupe somente o espaço necessário. */
-    width: auto;
-    margin: 20px 0 0 20px;
+    max-width: 100%;
+  }
+
+  .side-nav ul {
+    /* O display flex está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+    display: flex;
+    /* O flex-wrap: wrap está sendo usado para que os elementos filhos quebrem linha quando não couberem mais no container pai. */
+    flex-wrap: wrap;
   }
 
   .side-nav ul li {
-    /* O display inline-block está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário(block). */
-    display: inline-block;
+    margin: 0 10px 10px 0;
   }
 
   .side-nav ul li a {
@@ -81,15 +89,7 @@
   }
 
   .side-nav ul li a::before {
-    /* O display block está sendo usado para que o elemento ocupe toda a largura do elemento pai. */
-    display: block;
-    margin: 0;
     top: 0;
-  }
-}
-
-@media (min-width: 740px) and (max-width: 980px) {
-  .side-nav {
-    width: 200px;
+    margin: 0;
   }
 }
