--- a/brafe-3/brafe-bootstrap/src/styles/partials/header.css
+++ b/brafe-3/brafe-bootstrap/src/styles/partials/header.css
@@ -1,6 +1,14 @@
 .header {
   background-color: #d6d3c8;
-  padding: 20px;
+  padding: 20px 0;
+}
+
+.header-menu ul {
+  /* O display flex está sendo usado para que os elementos fiquem em linha/inline(um do lado do outro) e que possam ocupar somente o espaço necessário. */
+  display: flex;
+  /* O flex-wrap: wrap está sendo usado para que os elementos filhos quebrem linha quando não couberem mais no container pai. */
+  flex-wrap: wrap;
+  margin-bottom: 0;
 }
 
 .header-menu ul li a {
@@ -15,12 +23,7 @@
 }
 
 @media (max-width: 739px) {
-  .header-logo {
-    float: none;
-  }
-
   .header-menu ul {
-    float: none;
     margin-top: 10px;
   }
 }
